--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -7,5 +7,13 @@
     <li>
         <a href="/login">Login</a>
     </li>
+    <li>
+        <a href="/welcome">Bienvenida</a>
+    </li>
+    <li>
+        <form action="/destroy" method="post" class="form-header">
+            <button type="submit">Destruir cookie</button>
+        </form>
+    </li>
 </ul>
 </header>
