--- a/src/views/welcome.ejs
+++ b/src/views/welcome.ejs
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include("./partials/head") %>
-<body class="<%= user.color %>">
+<body class="<%= session.user.color %>">
     <%- include("./partials/header") %>
 
 
    <main>
     <div>
-        <p class="centro"><%= `${user.name} ,gracias por visitarnos!` %></p>
+        <p class="centro"><%= `${session.user.name} ,gracias por visitarnos!` %></p>
     </div>
    </main>
 
 
-    <%- include("./partials/footer") %>
 </body>
 </html>
